// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`algPermitted > asymmetric permits an asymmetric alg and rejects HS* 1`] = `
[
  {
    "key": "alg",
    "message": "symmetric alg "HS256" is not permitted for this artifact (asymmetric only)",
  },
]
`;

exports[`algPermitted > asymmetric-recommended permits HS* (never rejects) but still rejects none 1`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;

exports[`algPermitted > fapi permits only the allowlist 1`] = `
[
  {
    "key": "alg",
    "message": "alg "RS256" is not in the FAPI allowlist (PS256, ES256, EdDSA)",
  },
]
`;

exports[`algPermitted > rejects none for every class 1`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;

exports[`algPermitted > rejects none for every class 2`] = `
[
  {
    "key": "alg",
    "message": "alg: none is never permitted",
  },
]
`;
